# python-typedb-schema-builder

./: .gitignore  LICENSE  README.md  TypeQLLexer.py  TypeQLListener.py  pyproject.toml  requirements.txt  setup.py  src.py
grammar/: TypeQL.g4
src/typedb_schema_builder/: TypeQLParser.py  builder.py  exceptions.py  my_type.py
tests/: test_builder.py
typedbSchemaBuilder/: MyErrorListener.py  MyType.py  Type.py  TypeQL.interp  builder.py  exceptions.py  my_type.py
