[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "typedb_schema_builder"
version = "0.0.1"
authors = [
  { name="Pratap Singh", email="pratap.singh@vaticle.com" },
]
description = "typedb schema builder package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Might1331/python-typedb-schema-builder/"
"Bug Tracker" = "https://github.com/Might1331/python-typedb-schema-builder/issues"