[build-system]
requires = ["hatchling","antlr4-python3-runtime==4.13.0","antlr4-tools==0.2"]
build-backend = "hatchling.build"

[project]
name = "typedb_schema_builder"
version = "10.0.2"
authors = [
  { name="Pratap Singh", email="pratap.singh@vaticle.com" },
]
description = "typedb schema builder package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Might1331/python-typedb-schema-builder/"
"Bug Tracker" = "https://github.com/Might1331/python-typedb-schema-builder/issues"